--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,7 @@
 {
   "hosting": {
     "public": "out",
+    "site": "jarvis-travel-adventures",
     "ignore": [
       "firebase.json",
       "**/.*",
